forbid image dragging using a js script

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <div class="heading">
                         <p class="tag">Contact</p>
                         <h2>Let's work together</h2>
-                        <div class="subheading">Have a frontend project or need help? Reach out and let's discuss.<br>I typically respond within 24 hours.</div>
+                        <p class="subheading">Have a frontend project or need help? Reach out and let's discuss.<br>I typically respond within 24 hours.</p>
                     </div>
                     <div class="contact-info">
                         <a href="mailto:nevaroen@gmail.com" class="email">
@@ -260,5 +260,6 @@
     </div>
 
     <script src="js/main.js"></script>
+    <script>document.querySelectorAll("img").forEach(img => img.setAttribute("draggable", "false"));</script>
 </body>
 </html>
