--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neva Roen - Web Developer</title>
+    <title>Ahmed Marwan - Front-End Developer</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/typography.css">
+    <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/sections.css">
 </head>
 <body>
     <div class="root">
         <header class="section header">
             <div class="container">
-                <a href="/" class="logo">Neva Roen</a>
+                <a href="/" class="logo">Ahmed Marwan</a>
                 <nav class="navigation">
                     <ul class="navigation-links">
                         <li><a href="#hero">Home</a></li>
@@ -128,6 +128,22 @@
                     <p class="subheading">Projects I've built using HTML, CSS, and JavaScript that showcase my frontend skills.</p>
                 </div>
                 <div class="cards">
+                    
+                        <div class="card">
+                            <div class="image">
+                                <img src="assets/images/projects/tic-tac-toe.png" alt="Calculator screenshot picture">
+                            </div>
+                            <div class="info">
+                                <div class="text">
+                                    <h3>Tic-Tac-Toe game</h3>
+                                    <p class="subheading">A front-end project highlighting interactive gameplay, responsive design, and state management in the browser.</p>
+                                </div>
+                                <a href="https://ahmedmarwandev.github.io/tic-tac-toe-js" target="_blank" class="view-button">
+                                    View Project
+                                    <svg width="9" height="12" viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.58092 12L0 10.7215L5.83816 6L0 1.27853L1.58092 0L9 6L1.58092 12Z" fill="var(--clr-text-muted)"/></svg>
+                                </a>
+                            </div>
+                        </div>
 
                     <div class="card">
                         <div class="image">
@@ -137,22 +153,6 @@
                             <div class="text">
                                 <h3>Simple Calculator</h3>
                                 <p class="subheading">A simple calculator made using HTML, CSS, and vanila JavaScript</p>
-                            </div>
-                            <a href="#" class="view-button">
-                                View Project
-                                <svg width="9" height="12" viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.58092 12L0 10.7215L5.83816 6L0 1.27853L1.58092 0L9 6L1.58092 12Z" fill="var(--clr-text-muted)"/></svg>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="image">
-                            <img src="assets/images/projects/tic tac toe.png" alt="Calculator screenshot picture">
-                        </div>
-                        <div class="info">
-                            <div class="text">
-                                <h3>Simple tic tac toe game</h3>
-                                <p class="subheading">A simple tic tac toe game made using HTML, CSS, and vanila JavaScript</p>
                             </div>
                             <a href="#" class="view-button">
                                 View Project
@@ -189,10 +189,10 @@
                         <p class="subheading">Have a frontend project or need help? Reach out and let's discuss.<br>I typically respond within 24 hours.</p>
                     </div>
                     <div class="contact-info">
-                        <a href="mailto:nevaroen@gmail.com" class="email">
+                        <a href="mailto:ahmed.marwan.dev55@gmail.com" class="email">
                             <svg width="25" height="20" viewBox="0 0 25 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.875 20C1.375 20 0.9375 19.8125 0.5625 19.4375C0.1875 19.0625 0 18.625 0 18.125V1.875C0 1.375 0.1875 0.9375 0.5625 0.5625C0.9375 0.1875 1.375 0 1.875 0H23.125C23.625 0 24.0625 0.1875 24.4375 0.5625C24.8125 0.9375 25 1.375 25 1.875V18.125C25 18.625 24.8125 19.0625 24.4375 19.4375C24.0625 19.8125 23.625 20 23.125 20H1.875ZM12.5 10.5625L1.875 3.59375V18.125H23.125V3.59375L12.5 10.5625ZM12.5 8.6875L23 1.875H2.03125L12.5 8.6875ZM1.875 3.59375V1.875V18.125V3.59375Z" fill="white"/>
-                            </svg>nevaroen@gmail.com
+                            </svg>ahmed.marwan.dev55@gmail.com
                         </a>
                         <a href="https://wa.me/+201068329672" class="whatsapp">
                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -243,7 +243,7 @@
         <footer class="section footer">
             <div class="container">
                 <div class="content">
-                    <a href="/" class="logo">Neva Roen</a>
+                    <a href="/" class="logo">Ahmed Marwan</a>
                     <ul class="navigation-links">
                         <li><a href="#hero">Home</a></li>
                         <li><a href="#about">About</a></li>
@@ -253,7 +253,7 @@
                     </ul>
                 </div>
                 <div class="credits">
-                    <p>© Copyright 2026 Neva Roen. All rights reserved.</p>
+                    <p>© Copyright 2026 Ahmed Marwan. All rights reserved.</p>
                 </div>
             </div>
         </footer>
