--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                                 <div class="info">
                                     <div class="text">
                                         <h3>Tic-Tac-Toe game</h3>
-                                        <p class="subheading">A web-based interactive front-end project demonstrating turn-based gameplay, real-time UI updates, and state management.</p>
+                                        <p class="subheading">Interactive Tic-Tac-Toe game with win detection and game reset functionality. Built to practice DOM manipulation and game logic.</p>
                                     </div>
-                                    <a href="https://ahmedmarwandev.github.io/tic-tac-toe-js" target="_blank" class="view-button">
+                                    <a href="https://ahmedmarwandev.github.io/tic-tac-toe-js" class="view-button" target="_blank">
                                         View Project
                                         <svg width="9" height="12" viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.58092 12L0 10.7215L5.83816 6L0 1.27853L1.58092 0L9 6L1.58092 12Z" fill="var(--clr-text-muted)"/></svg>
                                     </a>
@@ -120,10 +120,10 @@
                             </div>
                             <div class="info">
                                 <div class="text">
-                                    <h3>Simple Calculator</h3>
-                                    <p class="subheading">A simple calculator made using HTML, CSS, and vanila JavaScript</p>
+                                    <h3>Calculator app</h3>
+                                    <p class="subheading">A fully functional calculator built with HTML, CSS, and JavaScript. Handles basic arithmetic operations with a clean, responsive interface.</p>
                                 </div>
-                                <a href="#" class="view-button">
+                                <a href="https://ahmedmarwandev.github.io/calculator-js" class="view-button" target="_blank">
                                     View Project
                                     <svg width="9" height="12" viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.58092 12L0 10.7215L5.83816 6L0 1.27853L1.58092 0L9 6L1.58092 12Z" fill="var(--clr-text-muted)"/></svg>
                                 </a>
@@ -132,14 +132,14 @@
 
                         <div class="card">
                             <div class="image">
-                                <img width="1920" height="1080" src="assets/images/projects/calculator.webp" alt="To-do list app screenshot">
+                                <img width="1920" height="1080" src="assets/images/projects/to-do-list.webp" alt="To-do list app screenshot">
                             </div>
                             <div class="info">
                                 <div class="text">
-                                    <h3>Product management app</h3>
-                                    <p class="subheading">A simple product management app made using HTML, CSS, and vanila JavaScript</p>
+                                    <h3>To-do list app</h3>
+                                    <p class="subheading">Task management app with add, edit, and delete functionality. Demonstrates CRUD operations and local data management.</p>
                                 </div>
-                                <a href="#" class="view-button">
+                                <a href="https://ahmedmarwandev.github.io/to-do-list-js" class="view-button" target="_blank">
                                     View Project
                                     <svg width="9" height="12" viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.58092 12L0 10.7215L5.83816 6L0 1.27853L1.58092 0L9 6L1.58092 12Z" fill="var(--clr-text-muted)"/></svg>
                                 </a>
@@ -232,7 +232,6 @@
                     <ul class="navigation-links">
                         <li><a href="#hero">Home</a></li>
                         <li><a href="#about">About</a></li>
-                        <!-- <li><a href="#process">Process</a></li> -->
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
